<resources>
    <string name="app_name">DDirori Volume</string>
    <string name="status">status</string>
    <string name="control">CONTROL</string>
    <string name="decibel">Decibel</string>
    <string name="volume">Volume</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="exit">exit</string>
    <string name="volume_status_sample">6</string>
    <string name="decibel_status">%1$d dB (amplitude %2$d)</string>
    <string name="decibel_simple_status">%1$d dB</string>
    <string name="decibel_status_sample">10 dB (amplitude 1000)</string>
    <string name="decibel_simple_status_sample">10 dB</string>
    <string name="set_stop">중지 후 설정하세요</string>
    <string name="set_uncheck">Now 체크 박스 해제 후 설정하세요</string>
    <string name="exit_because_not_allowed_permission">권한이 허가 되지 않아 종료합니다</string>
    <string name="exit_message">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다</string>
    <string name="wait_for_service">잠시 후 실행하세요. 서비스 구동중입니다.</string>
    <string name="start_volume_control">볼륨 조정을 시작합니다</string>
    <string name="stop_volume_control">볼륨 조정을 중지합니다</string>
</resources>
