<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.soky.dvol.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="3"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/layout_border"
        android:padding="10dp"
        >

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status_label"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <TextView
                    android:text="@string/decibel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_decibel_label"
                    android:textStyle="normal|bold"
                    android:paddingRight="10dp"
                    />
                <TextView
                    android:text="@string/decibel_status_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_decibel_textview"
                    />
            </LinearLayout>

            <SeekBar
                style="@style/SeekbarStyleDisable"
                android:id="@+id/status_decibel_range_seekbar"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <TextView
                    android:text="@string/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_volume_label"
                    android:textStyle="normal|bold"
                    android:paddingRight="8dp"
                    />

                <TextView
                    android:text="@string/volume_status_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_volume_textview"
                    />
            </LinearLayout>

            <SeekBar
                style="@style/SeekbarStyleDisable"
                android:id="@+id/status_volume_range_seekbar"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/layout_border"
        android:padding="10dp"
        >

        <TextView
            android:text="@string/control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/control_label"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="right"
                >

                <TextView
                    android:text="@string/decibel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/control_decibel_label"
                    android:textStyle="normal|bold"
                    android:paddingRight="10dp"
                    android:paddingLeft="0dp"
                    />
                <TextView
                    android:text="@string/decibel_simple_status_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/control_decibel_textview"
                    android:layout_weight="1"
                    />

                <CheckBox
                    android:text="Now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/now_checkbox"
                    />
            </LinearLayout>

            <SeekBar
                style="@style/SeekbarStyleEnable"
                android:id="@+id/control_decibel_range_seekbar"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <TextView
                    android:text="@string/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/control_volume_label"
                    android:textStyle="normal|bold"
                    android:paddingRight="8dp"
                    android:paddingLeft="0dp"
                    />
                <TextView
                    android:text="@string/volume_status_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/control_volume_textview"
                    />
            </LinearLayout>

            <SeekBar
                style="@style/SeekbarStyleEnable"
                android:id="@+id/control_volume_range_seekbar"
                />
        </LinearLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageButton
                android:layout_centerInParent="true"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img_start"
                android:background="@android:color/transparent"
                android:id="@+id/start_button"
                />
            <!--ToggleButton
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_centerInParent="true"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/start_button"
                android:checked="false"
                android:background="@drawable/start_stop_btn"
                /-->
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
